--- a/Backend_Part/SupportCenter/src/main/resources/application.properties
+++ b/Backend_Part/SupportCenter/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
-#ORM s/w specific properties
+#ORM s/w specific propertiess
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
