--- a/Backend_Part/SupportCenter/src/main/resources/application.properties
+++ b/Backend_Part/SupportCenter/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8888
 spring.datasource.url=jdbc:mysql://localhost:3306/supportCenter
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Root
 
 #ORM s/w specific propertiess
 spring.jpa.hibernate.ddl-auto=update
