--- a/Backend_Part/SupportCenter/src/main/resources/application.properties
+++ b/Backend_Part/SupportCenter/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #changing the server port
-server.port=8888
+server.port=8080
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/supportCenter
+spring.datasource.url=jdbc:mysql://localhost:3306/support_center
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Root
+spring.datasource.password=Surya@555
 
 #ORM s/w specific propertiess
 spring.jpa.hibernate.ddl-auto=update
