--- a/Backend_Part/SupportCenter/src/main/resources/application.properties
+++ b/Backend_Part/SupportCenter/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=8080
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/supportcenter
+spring.datasource.url=jdbc:mysql://localhost:3306/support_center
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Root
+spring.datasource.password=Surya@555
 
 #ORM s/w specific propertiess
 spring.jpa.hibernate.ddl-auto=update
@@ -14,3 +14,10 @@ spring.jpa.show-sql=true
 spring.profiles.active=production
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+# Enable CORS
+spring.webmvc.cors.enabled=true
+
+# Allowed origins
+spring.webmvc.cors.allowed-origins=http://127.0.0.1:5500
+
